[NOID] Some warning and deprecation clean up 🧹